--- a/pet-project-trello/src/styles/style.css
+++ b/pet-project-trello/src/styles/style.css
@@ -40,13 +40,13 @@ p {
     display: flex;
     flex-direction: column;
     place-content: center;
-    height: 282px;
-    width: 330px;
+    min-height: 264px;
+    max-width: 310px;
     /* закругление немножко отличается на боковых стенках */
     border-radius: 9px;
     border-bottom: solid 4px #B2B8C4;
     margin: 20px 0;
-    padding:10px;
+    padding: 10px;
     width: 94%;
     /* хули высота не настраивается???? */
     /* потому что самый верхний элемент на странице */
@@ -69,9 +69,26 @@ p {
 }
 
 .p-class-description {
-    width: 70%;
     height: 32px;
+    word-wrap: break-word;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
+
+/* стилизация полосы прокрутки на description  */
+.p-class-description::-webkit-scrollbar {
+    width: 5px;
+}
+.p-class-description::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #18aaaa;
+}
+.p-class-description::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px #6d798e3e;
+    border-radius: 10px;
+    background-color: #f9f9fd;
+  }
+/*  */
 
 .div-more-info {
     display: flex;
@@ -133,6 +150,7 @@ p {
     height: 6px;
     border-radius: 4px;
 }
+
 .div-container-note {
     background-color: #ffffff;
     display: flex;
@@ -142,6 +160,7 @@ p {
     margin: 20px 0;
     padding: 10px;
 }
+
 .list {
     margin: 15px 0 0 24px;
 }
